--- a/agent-backend/.env.example
+++ b/agent-backend/.env.example
@@ -13,3 +13,11 @@ CONVO_WINDOW=2
 SLACK_BOT_TOKEN=
 SLACK_SIGNING_SECRET=
 SLACK_API_BASE=
+SLACK_NOTIFY_ENABLED=1
+SLACK_NOTIFY_INTERVAL_SECONDS=30
+BACKGROUND_MEM0_WRITES=1
+DEBUG_SYSTEM_PROMPT=0
+SYSTEM_PROMPT_LOG_PATH=
+
+SUPABASE_URL=
+SUPABASE_KEY=
