add memory cache ttl

--- a/agent-backend/.env.example
+++ b/agent-backend/.env.example
@@ -18,6 +18,8 @@ SLACK_NOTIFY_INTERVAL_SECONDS=30
 BACKGROUND_MEM0_WRITES=1
 DEBUG_SYSTEM_PROMPT=0
 SYSTEM_PROMPT_LOG_PATH=
+MEM0_CONTEXT_TTL_SECONDS=120
+MEM0_CACHE_BACKEND=supabase
 
 SUPABASE_URL=
 SUPABASE_KEY=
