--- a/agent-backend/.env.example
+++ b/agent-backend/.env.example
@@ -20,6 +20,7 @@ DEBUG_SYSTEM_PROMPT=0
 SYSTEM_PROMPT_LOG_PATH=
 MEM0_CONTEXT_TTL_SECONDS=120
 MEM0_CACHE_BACKEND=supabase
+ARCHIVE_CRON_TOKEN=
 
 SUPABASE_URL=
 SUPABASE_KEY=
